# Janus

./: README.md
data/: README.md  finger_hyb_dist.csv  finger_hyb_thresh.csv  finger_smc.csv  finger_tee.csv  huang.csv  iris_hyb_dist.csv  iris_hyb_thresh.csv  iris_smc.csv  iris_tee.csv
plot/: README.md  biometric.ipynb  janus.ipynb
she/: README.md  bench.sh  go.mod  go.sum
she/cmd/: README.md  hyb_janus.go
she/dedup/: README.md  janus.go  plain_types.go  strip_pack.go  util.go
smc/: CMakeLists.txt  README.md  bench_hyb_threshold.sh  bench_smc_janus.sh  installer.sh
smc/bio-dedup/: CMakeLists.txt  README.md  hyb_threshold.cpp  plain_biometric.cpp  smc_janus.cpp
smc/libs/: install_emp.py
tee/: Cargo.toml  README.md
tee/.cargo/: config
tee/src/: code.rs  main.rs  signature.rs
